fix overflow 480 estate

--- a/estate/less/not-apple.less
+++ b/estate/less/not-apple.less
@@ -94,3 +94,20 @@
 .row.not-prepared .col-xs-12 p {
 	width: auto;
 }
+
+.row.head .controls.four-step-filter .col-md-4 .input-helper--checkbox {
+    font-size: 7px;
+}
+.slider-wrap {
+    display: none;
+}
+
+.row.not-prepared .author img {
+    display: block;
+    margin: 0 auto;
+    float: none;
+}
+.row.not-prepared .author div {
+    margin: 0;
+    
+}
